# OrganicGraph

./: .gitignore  README.md  best_graph_model.pt  best_sequence_model.pt  dataset.py  dev.ipynb  graph_config.json  graph_training_log.csv  models.py  proposal.md  pyproject.toml  requirements.txt  sequence_config.json  sequence_training_log.csv  train.py  train_xgb.py  z.py
data/: train.csv
