[project]
name = "graph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "xgboost>=3.1.2",
]
